--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ set(LIBS ${LIBS}
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
 
 set(SOURCE_FILES
+	src/util.c
 	src/impl/xfers.c
 	src/toxprpl.c)
 
