Extract single-user chat functionality (PRPL-wise) to ``purple/chat.c''

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,9 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
 set(SOURCE_FILES
 	src/util.c
 	src/purple/account.c
+	src/purple/buddy.c
+	src/purple/chat.c
+	src/tox/buddy.c
 	src/impl/xfers.c
 	src/toxprpl.c)
 
