--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,10 @@ set(SOURCE_FILES
 	src/purple/buddy.c
 	src/purple/chat.c
 	src/purple/commands.c
+	src/purple/xfers.c
 	src/tox/buddy.c
 	src/tox/chat.c
+	src/tox/xfers.c
 	src/impl/xfers.c
 	src/toxprpl.c)
 
