rename transactional structures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ set(LIBS ${LIBS}
 	${LIBTOX_LIBRARIES} 
 	${LIBPURPLE_LIBRARIES})
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -std=c99")
 
 set(SOURCE_FILES
 	src/util.c
